
# $Id$

EXTRA_DIST = \
             authors.docs \
             cashflows.docs \
             coreclasses.docs \
             currencies.docs \
             datetime.docs \
             examples.docs \
             findiff.docs \
             groups.docs \
             history.docs \
             index.docs \
             indexes.docs \
             install.docs \
             instruments.docs \
             license.docs \
             math.docs \
             mcarlo.docs \
             overview.docs \
             patterns.docs \
             platforms.docs \
             pricers.docs \
             randomnumbers.docs \
             resources.docs \
             solvers1d.docs \
             termstructures.docs \
             usage.docs \
             utilities.docs \
             where.docs





