
# $Id$

EXTRA_DIST = \
             authors.docs \
             coreclasses.docs \
             currencies.docs \
             datetime.docs \
             examples.docs \
             findiff.docs \
             fixedincome.docs \
             history.docs \
             index.docs \
             install.docs \
             instruments.docs \
             lattices.docs \
             license.docs \
             math.docs \
             mcarlo.docs \
             overview.docs \
             patterns.docs \
             platforms.docs \
             resources.docs \
             termstructures.docs \
             usage.docs \
             utilities.docs \
             where.docs

